# PMT-counter

./: .gitignore  CMakeLists.txt  PMTCounter.c  PMTCounter.pio  README.md  main.c  pio_code.pio
PCB/: PMT_counter_4_layers.kicad_pcb  PMT_counter_4_layers.kicad_pro  PMT_counter_4_layers.kicad_sch  PMT_counter_4_layers.round-tracks-config  counter.kicad_sch  dual_power.kicad_sch  latch.kicad_sch  ~PMT_counter_4_layers.kicad_sch.lck
PCB/production/: netlist.ipc
read_sample/: readPMT.py
release/: PMT-Counter.uf2  PMT-Counter_100kHz.uf2  PMT-Counter_100kHz_wait10.uf2  PMT-Counter_125MHz.uf2  PMT-Counter_125MHz_wait10.uf2  PMT-Counter_125MHz_wait10_fast_readout_alpha.uf2  PMT-Counter_1MHz.uf2  PMT-Counter_20MHz.uf2  PMT-Counter_20MHz_wait10.uf2  PMT-Counter_2MHz.uf2  PMT-Counter_2MHz_wait10.uf2  PMT-Counter_500kHz.uf2  PMT-Counter_500kHz_wait10.uf2  PMT-Counter_50MHz.uf2  PMT-Counter_50MHz_wait10.uf2
